--- a/about/index.html
+++ b/about/index.html
@@ -37,31 +37,54 @@
     searchContainer?.querySelector("form")?.addEventListener("submit", (e) => {
         e.preventDefault()
     })
+
+    const cancelablePromise = promise => {
+        const controller = new AbortController()
+        const signal = controller.signal
+
+        const wrappedPromise = new Promise((resolve, reject) => {
+            signal.addEventListener("abort", () => {
+                reject('Promise Aborted')
+            })
+
+            promise.then(resolve, reject)
+        })
+
+        return {
+            promise: wrappedPromise,
+            cancel: () => controller.abort()
+        }
+    }
+    let abort = null
     searchInput.addEventListener("input", async e => {
         if (e.target.dataset.loaded !== 'true') {
             e.target.dataset.loaded = 'true'
-            window.pagefind = await import("/pagefind/pagefind.js");
+            window.pagefind = await import("/dist/pagefind/pagefind.js");
             pagefind.init()
         }
 
         const input = e.target.value.trim()
         if (input.length) {
-            // window.pagefind.preload(input)
-            const search = await window.pagefind.debouncedSearch(input)
+            const search = await pagefind.debouncedSearch(input)
             if (search === null) {
                 return
             }
+
+            abort && abort()
             const searchResults = document.querySelector("#search-results")
             searchResults.innerHTML = ""
-            for (const result of search.results) {
-                const data = await result.data()
-                searchResults.innerHTML += `
+            abort = cancelablePromise(new Promise(async resolve => {
+                for (const result of search.results) {
+                    const data = await result.data()
+                    searchResults.innerHTML += `
                     <a href="${data.url}" class="block px-4 py-2 rounded-xl bg-base/80 blur-global animate-in fade-in mt-1 first:mt-0 hover:bg-base transition-all">
                         <h2 class="text-xl font-bold line-clamp-1">${data.meta.title}</h2>
                         <p class="line-clamp-3">${data.excerpt}</p>
                     </a>
                 `
-            }
+                }
+                resolve()
+            })).cancel
         }
     })
 </script> <header class="fixed h-16 w-full blur-global"> <div class="container-global h-full flex items-center"> <div class="text-xl font-bold cursor-pointer"> <a href="/">Hi! Jazee</a> </div> <nav class="ml-auto max-sm:hidden"> <a class="ml-8 hover:text-secondary transition-all" href="/projects">Projects</a><a class="ml-8 hover:text-secondary transition-all" href="/links">Links</a><a class="ml-8 hover:text-secondary transition-all" href="/about">About</a> </nav> <div class="ml-auto hidden max-sm:flex icon-button cursor-pointer relative group"> <svg width="1em" height="1em" viewBox="0 0 24 24" class="w-6 h-6 m-auto" data-icon="material-symbols:menu-rounded">  <symbol id="ai:material-symbols:menu-rounded"><path fill="currentColor" d="M4 18q-.425 0-.712-.288T3 17t.288-.712T4 16h16q.425 0 .713.288T21 17t-.288.713T20 18zm0-5q-.425 0-.712-.288T3 12t.288-.712T4 11h16q.425 0 .713.288T21 12t-.288.713T20 13zm0-5q-.425 0-.712-.288T3 7t.288-.712T4 6h16q.425 0 .713.288T21 7t-.288.713T20 8z"/></symbol><use xlink:href="#ai:material-symbols:menu-rounded"></use>  </svg> <nav class="absolute top-8 -left-full rounded-xl shadow-xl bg-base hidden group-hover:block animate-in fade-in"> <a class="flex items-center pl-2 py-2 first:rounded-t-xl last:rounded-b-xl hover:bg-hover transition-all" href="/projects"> Projects <svg width="1em" height="1em" viewBox="0 0 24 24" class="w-6 h-6 ml-auto" data-icon="material-symbols:chevron-right-rounded">  <symbol id="ai:material-symbols:chevron-right-rounded"><path fill="currentColor" d="M12.6 12L8.7 8.1q-.275-.275-.275-.7t.275-.7t.7-.275t.7.275l4.6 4.6q.15.15.213.325t.062.375t-.062.375t-.213.325l-4.6 4.6q-.275.275-.7.275t-.7-.275t-.275-.7t.275-.7z"/></symbol><use xlink:href="#ai:material-symbols:chevron-right-rounded"></use>  </svg> </a><a class="flex items-center pl-2 py-2 first:rounded-t-xl last:rounded-b-xl hover:bg-hover transition-all" href="/links"> Links <svg width="1em" height="1em" viewBox="0 0 24 24" class="w-6 h-6 ml-auto" data-icon="material-symbols:chevron-right-rounded">  <use xlink:href="#ai:material-symbols:chevron-right-rounded"></use>  </svg> </a><a class="flex items-center pl-2 py-2 first:rounded-t-xl last:rounded-b-xl hover:bg-hover transition-all" href="/about"> About <svg width="1em" height="1em" viewBox="0 0 24 24" class="w-6 h-6 ml-auto" data-icon="material-symbols:chevron-right-rounded">  <use xlink:href="#ai:material-symbols:chevron-right-rounded"></use>  </svg> </a> </nav> </div> <button id="search" class="ml-4 icon-button"> <svg width="1em" height="1em" viewBox="0 0 24 24" class="block w-6 h-6 m-auto" data-icon="material-symbols:search-rounded">  <symbol id="ai:material-symbols:search-rounded"><path fill="currentColor" d="M9.5 16q-2.725 0-4.612-1.888T3 9.5t1.888-4.612T9.5 3t4.613 1.888T16 9.5q0 1.1-.35 2.075T14.7 13.3l5.6 5.6q.275.275.275.7t-.275.7t-.7.275t-.7-.275l-5.6-5.6q-.75.6-1.725.95T9.5 16m0-2q1.875 0 3.188-1.312T14 9.5t-1.312-3.187T9.5 5T6.313 6.313T5 9.5t1.313 3.188T9.5 14"/></symbol><use xlink:href="#ai:material-symbols:search-rounded"></use>  </svg> </button> <button id="theme" class="ml-2 max-sm:ml-4 icon-button"></button> </div> </header> <script>
@@ -111,4 +134,4 @@
 </script>  <main class="mt-20 mb-4"> <div class="container-global">  <article class="article-global" data-pagefind-body> <h1>About</h1> <div class="flex self-center mt-2 space-x-2"><a href="https://github.com/Jazee6" target="_blank"><svg width="1em" height="1em" viewBox="0 0 24 24" class="w-8 h-8 hover:text-secondary transition-all" data-icon="mdi-github">  <symbol id="ai:local:mdi-github"><path fill="currentColor" d="M12 2A10 10 0 0 0 2 12c0 4.42 2.87 8.17 6.84 9.5.5.08.66-.23.66-.5v-1.69c-2.77.6-3.36-1.34-3.36-1.34-.46-1.16-1.11-1.47-1.11-1.47-.91-.62.07-.6.07-.6 1 .07 1.53 1.03 1.53 1.03.87 1.52 2.34 1.07 2.91.83.09-.65.35-1.09.63-1.34-2.22-.25-4.55-1.11-4.55-4.92 0-1.11.38-2 1.03-2.71-.1-.25-.45-1.29.1-2.64 0 0 .84-.27 2.75 1.02.79-.22 1.65-.33 2.5-.33s1.71.11 2.5.33c1.91-1.29 2.75-1.02 2.75-1.02.55 1.35.2 2.39.1 2.64.65.71 1.03 1.6 1.03 2.71 0 3.82-2.34 4.66-4.57 4.91.36.31.69.92.69 1.85V21c0 .27.16.59.67.5C19.14 20.16 22 16.42 22 12A10 10 0 0 0 12 2"/></symbol><use xlink:href="#ai:local:mdi-github"></use>  </svg></a><a href="mailto:jazee@jaze.top" target="_blank"><svg width="1em" height="1em" viewBox="0 0 24 24" class="w-8 h-8 hover:text-secondary transition-all" data-icon="material-symbols:mail-rounded">  <symbol id="ai:material-symbols:mail-rounded"><path fill="currentColor" d="M4 20q-.825 0-1.412-.587T2 18V6q0-.825.588-1.412T4 4h16q.825 0 1.413.588T22 6v12q0 .825-.587 1.413T20 20zm8-7.175q.125 0 .263-.038t.262-.112L19.6 8.25q.2-.125.3-.312t.1-.413q0-.5-.425-.75T18.7 6.8L12 11L5.3 6.8q-.45-.275-.875-.012T4 7.525q0 .25.1.438t.3.287l7.075 4.425q.125.075.263.113t.262.037"/></symbol><use xlink:href="#ai:material-symbols:mail-rounded"></use>  </svg></a></div>
 <p>本站内容默认采用CC BY-NC 4.0协议，要查看此许可证的副本，请访问 <a href="http://creativecommons.org/licenses/by-nc/4.0/">http://creativecommons.org/licenses/by-nc/4.0/</a></p> </article>   </div> </main>  <footer class="mt-auto bg-base transition-all h-16 shrink-0 py-2"> <div class="container-global text-secondary text-sm flex flex-col justify-center h-full"> <div>&copy; 2024 Jazee</div> <div>
 Powered by <a class="text-primary hover:text-secondary hover:underline transition-all" href="https://github.com/Jazee6/astro-blur" target="_blank">Astro
-            Blur</a> 0.2.1 </div> </div> </footer> </body></html>  
+            Blur</a> 0.2.2 </div> </div> </footer> </body></html>  
