--- a/projects/index.html
+++ b/projects/index.html
@@ -37,31 +37,54 @@
     searchContainer?.querySelector("form")?.addEventListener("submit", (e) => {
         e.preventDefault()
     })
+
+    const cancelablePromise = promise => {
+        const controller = new AbortController()
+        const signal = controller.signal
+
+        const wrappedPromise = new Promise((resolve, reject) => {
+            signal.addEventListener("abort", () => {
+                reject('Promise Aborted')
+            })
+
+            promise.then(resolve, reject)
+        })
+
+        return {
+            promise: wrappedPromise,
+            cancel: () => controller.abort()
+        }
+    }
+    let abort = null
     searchInput.addEventListener("input", async e => {
         if (e.target.dataset.loaded !== 'true') {
             e.target.dataset.loaded = 'true'
-            window.pagefind = await import("/pagefind/pagefind.js");
+            window.pagefind = await import("/dist/pagefind/pagefind.js");
             pagefind.init()
         }
 
         const input = e.target.value.trim()
         if (input.length) {
-            // window.pagefind.preload(input)
-            const search = await window.pagefind.debouncedSearch(input)
+            const search = await pagefind.debouncedSearch(input)
             if (search === null) {
                 return
             }
+
+            abort && abort()
             const searchResults = document.querySelector("#search-results")
             searchResults.innerHTML = ""
-            for (const result of search.results) {
-                const data = await result.data()
-                searchResults.innerHTML += `
+            abort = cancelablePromise(new Promise(async resolve => {
+                for (const result of search.results) {
+                    const data = await result.data()
+                    searchResults.innerHTML += `
                     <a href="${data.url}" class="block px-4 py-2 rounded-xl bg-base/80 blur-global animate-in fade-in mt-1 first:mt-0 hover:bg-base transition-all">
                         <h2 class="text-xl font-bold line-clamp-1">${data.meta.title}</h2>
                         <p class="line-clamp-3">${data.excerpt}</p>
                     </a>
                 `
-            }
+                }
+                resolve()
+            })).cancel
         }
     })
 </script> <header class="fixed h-16 w-full blur-global"> <div class="container-global h-full flex items-center"> <div class="text-xl font-bold cursor-pointer"> <a href="/">Hi! Jazee</a> </div> <nav class="ml-auto max-sm:hidden"> <a class="ml-8 hover:text-secondary transition-all" href="/projects">Projects</a><a class="ml-8 hover:text-secondary transition-all" href="/links">Links</a><a class="ml-8 hover:text-secondary transition-all" href="/about">About</a> </nav> <div class="ml-auto hidden max-sm:flex icon-button cursor-pointer relative group"> <svg width="1em" height="1em" viewBox="0 0 24 24" class="w-6 h-6 m-auto" data-icon="material-symbols:menu-rounded">  <symbol id="ai:material-symbols:menu-rounded"><path fill="currentColor" d="M4 18q-.425 0-.712-.288T3 17t.288-.712T4 16h16q.425 0 .713.288T21 17t-.288.713T20 18zm0-5q-.425 0-.712-.288T3 12t.288-.712T4 11h16q.425 0 .713.288T21 12t-.288.713T20 13zm0-5q-.425 0-.712-.288T3 7t.288-.712T4 6h16q.425 0 .713.288T21 7t-.288.713T20 8z"/></symbol><use xlink:href="#ai:material-symbols:menu-rounded"></use>  </svg> <nav class="absolute top-8 -left-full rounded-xl shadow-xl bg-base hidden group-hover:block animate-in fade-in"> <a class="flex items-center pl-2 py-2 first:rounded-t-xl last:rounded-b-xl hover:bg-hover transition-all" href="/projects"> Projects <svg width="1em" height="1em" viewBox="0 0 24 24" class="w-6 h-6 ml-auto" data-icon="material-symbols:chevron-right-rounded">  <symbol id="ai:material-symbols:chevron-right-rounded"><path fill="currentColor" d="M12.6 12L8.7 8.1q-.275-.275-.275-.7t.275-.7t.7-.275t.7.275l4.6 4.6q.15.15.213.325t.062.375t-.062.375t-.213.325l-4.6 4.6q-.275.275-.7.275t-.7-.275t-.275-.7t.275-.7z"/></symbol><use xlink:href="#ai:material-symbols:chevron-right-rounded"></use>  </svg> </a><a class="flex items-center pl-2 py-2 first:rounded-t-xl last:rounded-b-xl hover:bg-hover transition-all" href="/links"> Links <svg width="1em" height="1em" viewBox="0 0 24 24" class="w-6 h-6 ml-auto" data-icon="material-symbols:chevron-right-rounded">  <use xlink:href="#ai:material-symbols:chevron-right-rounded"></use>  </svg> </a><a class="flex items-center pl-2 py-2 first:rounded-t-xl last:rounded-b-xl hover:bg-hover transition-all" href="/about"> About <svg width="1em" height="1em" viewBox="0 0 24 24" class="w-6 h-6 ml-auto" data-icon="material-symbols:chevron-right-rounded">  <use xlink:href="#ai:material-symbols:chevron-right-rounded"></use>  </svg> </a> </nav> </div> <button id="search" class="ml-4 icon-button"> <svg width="1em" height="1em" viewBox="0 0 24 24" class="block w-6 h-6 m-auto" data-icon="material-symbols:search-rounded">  <symbol id="ai:material-symbols:search-rounded"><path fill="currentColor" d="M9.5 16q-2.725 0-4.612-1.888T3 9.5t1.888-4.612T9.5 3t4.613 1.888T16 9.5q0 1.1-.35 2.075T14.7 13.3l5.6 5.6q.275.275.275.7t-.275.7t-.7.275t-.7-.275l-5.6-5.6q-.75.6-1.725.95T9.5 16m0-2q1.875 0 3.188-1.312T14 9.5t-1.312-3.187T9.5 5T6.313 6.313T5 9.5t1.313 3.188T9.5 14"/></symbol><use xlink:href="#ai:material-symbols:search-rounded"></use>  </svg> </button> <button id="theme" class="ml-2 max-sm:ml-4 icon-button"></button> </div> </header> <script>
@@ -110,4 +133,4 @@
     });
 </script>  <main class="mt-20 mb-4"> <div class="container-global">  <ul data-pagefind-body> <li> <a href="https://github.com/Jazee6/astro-blur" target="_blank" class="flex items-baseline p-4 card mb-4"> <h2 class="font-bold text-xl text-nowrap">Astro Blur</h2> <p class="ml-4 max-sm:hidden">A static blog theme built with Astro / 一个静态Astro博客主题</p> <svg width="1em" height="1em" viewBox="0 0 24 24" class="ml-auto w-7 h-7 self-end shrink-0" data-icon="material-symbols:open-in-new">  <symbol id="ai:material-symbols:open-in-new"><path fill="currentColor" d="M5 21q-.825 0-1.412-.587T3 19V5q0-.825.588-1.412T5 3h7v2H5v14h14v-7h2v7q0 .825-.587 1.413T19 21zm4.7-5.3l-1.4-1.4L17.6 5H14V3h7v7h-2V6.4z"/></symbol><use xlink:href="#ai:material-symbols:open-in-new"></use>  </svg> </a> </li><li> <a href="https://github.com/Jazee6/cloudflare-ai-web" target="_blank" class="flex items-baseline p-4 card mb-4"> <h2 class="font-bold text-xl text-nowrap">Cloudflare AI Web</h2> <p class="ml-4 max-sm:hidden">支持Gemini Pro / Cloudflare Workers AI / ChatGPT的融合Web平台</p> <svg width="1em" height="1em" viewBox="0 0 24 24" class="ml-auto w-7 h-7 self-end shrink-0" data-icon="material-symbols:open-in-new">  <use xlink:href="#ai:material-symbols:open-in-new"></use>  </svg> </a> </li> </ul>   </div> </main>  <footer class="mt-auto bg-base transition-all h-16 shrink-0 py-2"> <div class="container-global text-secondary text-sm flex flex-col justify-center h-full"> <div>&copy; 2024 Jazee</div> <div>
 Powered by <a class="text-primary hover:text-secondary hover:underline transition-all" href="https://github.com/Jazee6/astro-blur" target="_blank">Astro
-            Blur</a> 0.2.1 </div> </div> </footer> </body></html>  
+            Blur</a> 0.2.2 </div> </div> </footer> </body></html>  
